--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DISCORD_BOT_TOKEN=
-MONGO_URI=
+DISCORD_BOT_TOKEN=OTk3NTkxMDE5NDAxMDAzMTIw.GKUo27.Bci9l3saOkEUfTiY5GqF_AWvLUgFKhwfDWfRLw
+MONGO_URI=mongodb+srv://c4clan1:c4clan1@c4clan.ohxsoxt.mongodb.net/?retryWrites=true&w=majority
